deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2025-03-01T00:33:42Z"
  generation: 1
  labels:
    app: first-deployment
  name: first-deployment
  namespace: default
  resourceVersion: "1327"
  uid: bd616a5c-3400-444f-a3e5-67e590660d24
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: first-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: first-deployment
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
