pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
      app: myapp
      type: front-end

spec:
  containers:
    - name: nginx-container
      image: nginx:latest
