tainting-nodes-and-applying-toleration-to-pods.yml
# kubectl taint nodes node-name key=value:taint-effect
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
  tolerations: 
   - key: "app"
     operator: "Equal"
     value: "blue"
     effect: "NoSchedule"
